--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #8f8f8f;
+            background-color: #595656;
         }
         .container {
             max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #e57ec1;
+            background-color: #201d1f;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(71, 71, 71, 0.1);
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
@@ -26,17 +26,27 @@
             width: calc(50% - 20px);
             margin-bottom: 20px;
             box-sizing: border-box;
+            text-align: center; /* Center align the content */
+            color: #fff; /* Set the text color */
         }
         .video-container iframe {
             width: 100%;
             height: 200px;
             border: 0;
+            border-radius: 8px; /* Example border-radius */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Example box shadow */
+        }
+        .video-title {
+            margin-top: 10px;
+            font-size: 16px;
         }
         h2 {
             width: 100%;
             margin-top: 0;
             margin-bottom: 20px;
             text-align: center;
+            color: aliceblue;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         @media (max-width: 768px) {
             .video-container {
@@ -51,32 +61,15 @@
     <h2>NEWBS DASHBOARD</h2>
     <div class="video-container">
         <iframe src="https://www.2embed.cc/embed/tt10786774"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
-        
+        <div class="video-title">Sam Bahadur</div>
     </div>
 
     <div class="video-container">
-        <!-- Vimeo Embed -->
-        <iframe src="https://www.2embed.cc/embed/tt9362722" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    </div>
-    
-    <div class="video-container">
-        <!-- Vimeo Embed -->
-        <iframe src="https://www.2embed.cc/embed/tt0137523" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://www.2embed.cc/embed/tt0137523"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+        <div class="video-title">Fight Club</div>
     </div>
 
-    <div class="video-container">
-        <!-- Vimeo Embed -->
-        <iframe src="https://www.2embed.cc/embed/tt5463162" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    </div>
-
-    <div class="video-container">
-        <!-- Vimeo Embed -->
-        <iframe src="https://www.2embed.cc/embed/tt1517268" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    </div>
-
-    <div class="video-container">
-        <iframe src="https://www.2embed.cc/embed/tt5537002" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    </div>
+    <!-- Add more video-container divs with iframes and titles here -->
 
 </div>
 
