--- a/index.html
+++ b/index.html
@@ -120,9 +120,26 @@
             <div class="video-title">Fight Club</div>
         </div>
         <div class="video-container">
-            <iframe src="https://www.2embed.cc/embed/tt4154796"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <iframe src="https://www.2embed.cc/embed/tt0137523"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
             <div class="video-title">Avengers Endgame</div>
         </div>
+        <div class="video-container">
+            <iframe src="https://www.2embed.cc/embed/tt15654262"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <div class="video-title">Chup</div>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.2embed.cc/embed/tt13287846"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <div class="video-title">Napoleon</div>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.2embed.cc/embed/tt15398776"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <div class="video-title">Oppenheimer</div>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.2embed.cc/embed/tt1160419"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <div class="video-title">Dune</div>
+        </div>
+
 
         <!-- Add more video-container divs with iframes and titles here -->
     </div>
