--- a/index.html
+++ b/index.html
@@ -139,8 +139,18 @@
             <iframe src="https://www.2embed.cc/embed/tt1160419"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
             <div class="video-title">Dune</div>
         </div>
-
-
+        <div class="video-container">
+            <iframe src="https://www.2embed.cc/embed/tt5537002"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <div class="video-title">Killers of the Flower Moon</div>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.2embed.cc/embed/tt0816692"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <div class="video-title">Interstellar</div>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.2embed.cc/embed/tt3521164"  width="560" height="360" frameborder="0" scrolling="no" allowfullscreen title="Sam Bahadur"></iframe>
+            <div class="video-title">Moana</div>
+        </div>
         <!-- Add more video-container divs with iframes and titles here -->
     </div>
 </div>
@@ -156,7 +166,7 @@
         const password = this.elements.password.value;
 
         // Mock authentication (replace this with your authentication logic)
-        if (username === 'saikat' && password === '29112003') {
+        if (username === 'newbs' && password === 'nununewbs69') {
             // Show the container with videos
             container.style.display = 'block';
             // Hide the login form
@@ -169,3 +179,4 @@
 
 </body>
 </html>
+
