--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         const password = this.elements.password.value;
 
         // Mock authentication (replace this with your authentication logic)
-        if (username === 'newbs' && password === 'nununewbs69') {
+        if (username === 'newbs' && password === '29112003') {
             // Show the container with videos
             container.style.display = 'block';
             // Hide the login form
